Hid card template in HTML file. Added input and select styling for user input feedback and accessibility. Created new TS files for DOM variables and for Card class. Added new folders for organization.

--- a/rest-countries-api-with-color-theme-switcher-master/public/index.html
+++ b/rest-countries-api-with-color-theme-switcher-master/public/index.html
@@ -47,9 +47,8 @@
         <div id="main-content-container" class="row pt-4">
                 <div id="card-grid-container">
                     <ul id="cards-batch" class="row row-cols-4">
-                         <!-- style="display: none;" -->
-                        <li class="card-template card col">
-                            <img src="..." class="card-img-top" alt="national-flag"/>
+                        <li class="card-template card col" style="display: none;">
+                            <img src="..." class="card-img-top" alt="national-flag" />
                             <div class="card-body">
                                 <h2 class="card-title">Country Name</h2>
                                 <p class="card-text pb-4 pt-1">
@@ -59,50 +58,6 @@
                                 </p>
                             </div>
                         </li>
-                        <li class="card-template card col">
-                            <img src="..." class="card-img-top" alt="national-flag"/>
-                            <div class="card-body">
-                                <h2 class="card-title">Country Name</h2>
-                                <p class="card-text pb-4 pt-1">
-                                    <b>Population:</b> 99,999,999<br>
-                                    <b>Region:</b> Europe<br>
-                                    <b>Capital:</b> Belin<br>
-                                </p>
-                            </div>
-                        </li>                     
-                        <li class="card-template card col">
-                            <img src="..." class="card-img-top" alt="national-flag"/>
-                            <div class="card-body">
-                                <h2 class="card-title">Country Name</h2>
-                                <p class="card-text pb-4 pt-1">
-                                    <b>Population:</b> 99,999,999<br>
-                                    <b>Region:</b> Europe<br>
-                                    <b>Capital:</b> Belin<br>
-                                </p>
-                            </div>
-                        </li> 
-                        <li class="card-template card col">
-                            <img src="..." class="card-img-top" alt="national-flag"/>
-                            <div class="card-body">
-                                <h2 class="card-title">Country Name</h2>
-                                <p class="card-text pb-4 pt-1">
-                                    <b>Population:</b> 99,999,999<br>
-                                    <b>Region:</b> Europe<br>
-                                    <b>Capital:</b> Belin<br>
-                                </p>
-                            </div>
-                        </li> 
-                        <li class="card-template card col">
-                            <img src="..." class="card-img-top" alt="national-flag"/>
-                            <div class="card-body">
-                                <h2 class="card-title">Country Name</h2>
-                                <p class="card-text pb-4 pt-1">
-                                    <b>Population:</b> 99,999,999<br>
-                                    <b>Region:</b> Europe<br>
-                                    <b>Capital:</b> Belin<br>
-                                </p>
-                            </div>
-                        </li> 
                     </ul>
                 </div>
             </div>
