Deleted unnecessary module  eventhandler.ts and moved all functionality to main app index.ts. Created Custom Error Classes DataError and FetchError in errorhandling module. Cached all DOM variables in dom-cache module. Created new class CountryCard for Card module. Created two new functions searchForCountry and filterByRegion in filter module. Added Event listener to searchInput to check Validity state and showw the applicable error text when they occur. Created two new functions for dynamic-list module to handle dynamic content creation: createfragment that accepts an array containing CountryCard type objects, creates a new card using the card-template list item for each object in the array, appends them to a shared fragment, clears the innerHTML of the cardsBatch ul elements, and attaches the fragment to the cardsBatch. | renderCards calls the fetch for country data, creates CountryCard objects and places them into the cardsData array, and calls the createFragment function; passing cardsData as the parameter.

--- a/rest-countries-api-with-color-theme-switcher-master/public/index.html
+++ b/rest-countries-api-with-color-theme-switcher-master/public/index.html
@@ -30,8 +30,9 @@
     </header>
     <main>
         <div id="interaction-query-container" class="row row-cols-md d-flex flex-column flex-md-row justify-content-between mb-4">
-            <div id="country-search-bar-container" class="col-md-10">
+            <div id="country-search-bar-container" class="col-md-10 d-flex flex-column">
                 <input id="country-search-bar" class="shadow-sm" type="search" placeholder="Search for a country... Try 'Cambodia!'">
+                <span id="search-error">test</span>
             </div>
             <div id="region-select-container" class="col-md-2">
                 <select name="region" id="region-select" class="shadow-sm">
