Padding, Margin, Height, and Width Adjustment for tablet sizes and mobile.

--- a/where-in-the-world-main/index.html
+++ b/where-in-the-world-main/index.html
@@ -19,7 +19,7 @@
     <script defer src="./index.js"></script>
 </head>
 <body class="d-flex flex-column justify-content-center d-md-inline">
-    <header class="d-flex shadow-sm">
+    <header class="d-flex">
         <div id="header-content-container" class="row-cols-md d-flex justify-content-between align-items-center">
             <div id="header-message-container" class="row-cols-md d-flex align-items-center">
                 <h1>Where in the world?</h1>
