--- a/where-in-the-world-main/index.html
+++ b/where-in-the-world-main/index.html
@@ -32,8 +32,9 @@
     <main>
         <div id="interaction-query-container" class="row row-cols-md d-flex flex-column flex-md-row justify-content-between mb-4">
             <div id="country-search-bar-container" class="col-md-10 d-flex flex-column">
-                <input id="country-search-bar" class="shadow-sm" type="search" placeholder="Search for a country... Try 'Cambodia!'">
-                <span id="search-error">test</span>
+                <input id="country-search-bar" class="shadow-sm" type="search" placeholder="Search for a country... Try 'Cambodia!'" 
+                minlength="3" pattern="[a-z A-Z]+">
+                <span id="search-error"></span>
             </div>
             <div id="region-select-container" class="col-md-2">
                 <select name="region" id="region-select" class="shadow-sm">
