Updated Country Information Page (Country details container) to be responsive for mobile

--- a/where-in-the-world-main/index.html
+++ b/where-in-the-world-main/index.html
@@ -36,6 +36,60 @@
         </div>
     </header>
     <main>
+        <!-- hidden -->
+        <section id="country-details-container" class="row">
+            <div id="back-button-container" class="col-12">
+                <button id="back-button">⇽ Back</button>
+            </div>
+            <div id="detail-image-container" class="col-md-6">
+                <img src="..." id="flag-img" alt="">
+            </div>
+            <div id="detail-information-container" class="col-md-6 row-cols-md">
+                <div id="detail-country-name-container" class="row">
+                    <p id="detail-country-name">Belgium</p>
+                </div>
+                <div id="detail-panels-container" class="row">
+                    <div id="detail-panel-left" class="col-md-6">
+                        <h2 id="information-left">
+                            <!--Template Literal-->
+                            <b>Native Name:</b> Belgie<br>
+                            <br>
+                            <b>Population:</b> 99,999,999<br>
+                            <br>
+                            <b>Region:</b> Europe<br>
+                            <br>
+                            <b>Sub Region:</b> Western Europe<br>
+                            <br>
+                            <b>Capital:</b> Berlin<br>
+                        </h2>
+                    </div>
+                    <div id="detail-panel-right" class="col-md-6">
+                        <h2 id="information-right">
+                            <!--Template Literal-->
+                            <b>Top Level Domain:</b> .be<br>
+                            <br>
+                            <b>Currencies:</b> Euro<br>
+                            <br>
+                            <b>Languages:</b> Dutch, French, German<br>
+                        </h2>
+                    </div>
+                    <div id="detail-panel-bottom"
+                        class="col-md-12 d-flex flex-column flex-md-row align-items-md-baseline">
+                        <h2 class="pe-4"><b>Border Countries:</b> </h2>
+                        <div id="detail-border-countries" class="row">
+                            <!--Template Literal of p tags per country
+                            For of / Map / Other method
+                            create a paragraph element for it.
+                            Styled in css
+                            -->
+                            <p class="detail-border-country col-4">Example Country</p>
+                            <p class="detail-border-country col-4">Example Country</p>
+                            <p class="detail-border-country col-4">Example Country</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <search id="interaction-query-container"
             class="row row-cols-md d-flex flex-column flex-md-row justify-content-between mb-4">
             <div id="country-search-bar-container" class="col-md-10 d-flex flex-column">
@@ -56,48 +110,6 @@
                 </select>
             </div>
         </search>
-        <!-- hidden -->
-        <section id="country-details-container" class="row">
-            <div id="detail-image-container" class="col-md-6">
-                <img src="..." id="flag-img" alt="">
-            </div>
-            <div id="detail-information-container" class="col-md-6 row-cols-md">
-                <div id="detail-country-name-container" class="row">
-                    <p id="detail-country-name">Belgium</p>
-                </div>
-                <div id="detail-panels-container" class="row">
-                    <div id="detail-panel-left" class="col-md-6">
-                        <h2 id="information-left">
-                            <!--Template Literal-->
-                            <b>Native Name:</b> Belgie<br>
-                            <b>Population:</b> 99,999,999<br>
-                            <b>Region:</b> Europe<br>
-                            <b>Sub Region:</b> Western Europe<br>
-                            <b>Capital:</b> Berlin<br>
-                        </h2>
-                    </div>
-                    <div id="detail-panel-right" class="col-md-6">
-                        <h2 id="information-right">
-                            <!--Template Literal-->
-                            <b>Top Level Domain:</b> .be<br>
-                            <b>Currencies:</b> Euro<br>
-                            <b>Languages:</b>Dutch, French, German<br>
-                        </h2>
-                    </div>
-                    <div id="detail-panel-bottom" class="col-md-12 d-flex flex-column flex-md-row align-items-md-center">
-                        <h2 class="pe-4">Border Countries: </h2>
-                        <div id="detail-border-countries">
-                            <!--Template Literal of p tags per country
-                        For of / Map / Other method
-                        create a paragraph element for it.
-                        Styled in css
-                        -->
-                            <p class="detail-border-country">Example Country</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section id="main-content-container" class="row pt-4" hidden>
             <div id="card-grid-container">
                 <ul id="cards-batch" class="row row-cols-4">
