Updated main fetch request to request additional fields needed. Added new fetch request for cioc codes for all countries due to 10 field search API limit. Updated Detailed Country Information page to display new details: native name, sub region, top level domain, currencies, and languages. Created 4 utility functions for reuse to created DetailedCountryCard objects and show details for border countries. Formatted code with Prettier.

--- a/where-in-the-world-main/index.html
+++ b/where-in-the-world-main/index.html
@@ -110,6 +110,8 @@
         <section id="main-content-container" class="row pt-4">
             <div id="card-grid-container">
                 <ul id="cards-batch" class="row row-cols-4">
+
+                    <h2>Loading Country Data...Please Wait (￣o￣) . z Z</h2>>
                     <li class="card-template card col" style="display: none;" tabindex="0" aria-label="View more country details?">
                         <img src="..." class="card-img-top" alt="national-flag" />
                         <div class="card-body">
